final corrections -> juhu :-D

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -33,6 +33,7 @@
 \newacronym{ac:iir}{IIR}{Infinite Impulse Response}
 \newacronym{ac:soc}{SoC}{System-on-a-Chip}
 \newacronym{ac:fpga}{FPGA}{Field Programmable Gate Array}
+\newacronym{ac:ui}{UI}{User Interface}
 
 
 
