--- a/appendix/cd/cd.tex
+++ b/appendix/cd/cd.tex
@@ -12,8 +12,8 @@
 %
 % 0.0.01      Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-\chapter{CD}\label{ch:cd}
-	Aus ökologischen und ökonomischen Gründen wird ein grosser Teil des Anhangs in Form einer CD-ROM dieser Dokumentation beigelegt. Die Dateistruktur entspricht dabei der Gliederung dieses Kapitels.
+\chapter{CD-ROM}\label{ch:cd}
+	Aus ökologischen und ökonomischen Gründen wird ein grosser Teil des Anhangs in Form einer CD-ROM beigelegt. Die Dateistruktur entspricht dabei der Gliederung dieses Kapitels.
     %
     \section{LabVIEW}\label{s:anhang_labview}
     	Alle benötigten \gls{g:labview}-Projekte:
@@ -45,6 +45,9 @@
     	\end{itemize}
     %
     \section{Datenblatt NI myRIO}\label{s:anhang_datasheets}
+    %
+    \section{Arbeitsjournal}
+    	
     	
     	
   
