--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -22,7 +22,7 @@ Dank der \acrshort{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmend
 Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren ist die Genauigkeit der Messung. Bereits eine kleine Abweichung in der Messung der Beschleunigung bewirkt einen grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor systembedingt Messfehler aufweist. Somit sind nur Messungen von kurzer Dauer (einigen Sekunden) mit anschliessender Berechnung der Position zu realisieren. Auch ist die Platzierung und Befestigung des Sensors eine schwierige Aufgabe. Durch seine Masse schwingt der Sensor zusätzlich bei jeder Bewegung mit und verfälscht somit das Resultat der Messung.\par		
 %
 \section{Zweck, Ziel, Intention und Notwendigkeit der Untersuchung}\label{sec:zweck}
-Der Zeitpunkt des Wiedereinstiegs in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren, um den Trainingsrückstand aufzuholen und den bisherigen Trainingsstand nicht weiter zu verlieren.\todo{überarbeiten} Zum andern sollte jedoch die Verletzung bestmöglich geheilt sein, um Folgeschäden und weitere Trainingsrückschläge zu vermeiden.\par 
+Der Zeitpunkt des Wiedereinstiegs in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren, um den Trainingsrückstand aufzuholen; Zum andern sollte jedoch die Verletzung bestmöglich geheilt sein, um Folgeschäden und weitere Trainingsrückschläge zu vermeiden.\par 
 %
 An der Eidgenössischen Hochschule für Sport Magglingen (EHSM) wird dazu unter der Leitung eines Physiotherapeuten ein Test am verletzen Sportler durchgeführt. Der Test dient zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der \acrshort{ac:EHSM} mehrere Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während der Übungen. Die Auslenkung des Knies in der \gls{g:transversalebene} des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist ersichtlich, ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten. Er entscheidet, ob der Sportler das Training wieder aufnehmen darf oder ob er noch pausieren muss.\par
 %
@@ -40,7 +40,7 @@ In einer Arbeit, verfasst an der Universität Linköping (Departement Elektrotechn
 In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wird das Verfolgen eines Bewegungsablauf mittels Beschleunigungssensors, \gls{g:gyroskop}s und \gls{g:magnetometer}s realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann werden die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift des \gls{g:gyroskop}s die Messung nach wenigen Sekunden schon stark verfälscht ist, wird eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration der Beschleunigung erfolgt somit nur, wenn sich das Testobjekt bewegt. Die Bewegung wird mit einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des \gls{g:gyroskop}s mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichen sie eine Genauigkeit von \unit[2.0]{cm} auf eine Distanz von \unit[50.0]{cm} \cite{lit:doubleint}.
 %
 \section{Aufgabenstellung}\label{s:aufgabenstellung} 
-	Die Aufgabenstellung wurde wie folgt durch die Betreuer und die Autoren definiert. Die Arbeit dauert 5 Wochen, wobei die Projektstudie eingerechnet ist. Für den genauen Wortlaut sei auf den Anhang \vref{ch:aufgabenstellung} verwiesen.\par
+	Die Aufgabenstellung wurde wie folgt durch die Betreuer und die Autoren definiert. Die Arbeit dauert fünf Wochen, wobei die Projektstudie eingerechnet ist. Für den genauen Wortlaut sei auf den Anhang \vref{ch:aufgabenstellung} verwiesen.\par
 	%
 %	Während der Karriere eines Sportlers treten oft Verletzungen auf, die eine längere Trainingsabsolvents zur Folge haben können. In dieser Phase ist es wichtig den richtigen Zeitpunkt für den Wiedereinstieg zu finden, da sonst entweder wertvolle Zeit des Aufbaus verloren geht, oder die Verletzung wieder aufbrechen kann. Bisweilen wurde diese Beurteilung durch die subjektive Wahrnehmung eines Physiotherapeuten durchgeführt und hatte keine messtechnische Grundlagen. Im Zuge eines Forschungsprojekts soll nun eine Methodik entwickelt werden damit ein Therapeut eine Basis für eine begründete Diagnose hat.\par
 	%
@@ -123,7 +123,7 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 	Da kein Pflichtenheft zu diesem Projekt existiert, wird im Folgenden die Anforderungen an das Messprinzip definiert und erklärt.\par
 	%
 	\subsection{Messbereich}\label{ss:messbereich}
-		Das Kreuzband\footnote{für detaillierte Erläuterungen sei auf den Abschnitt \vref{s:funktion_kreuzband} verwiesen} engt den Bewegungsfreiraum des Knies ein. Diese Einschränkung erlaubt es, den geforderten Messbereich zu beschränken und dadurch das Konzept stark zu vereinfachen. Als Ausgangslage für die Auslegung des nötigen Bereichs dienen Messungen\footnote{Die Messungen wurden mithilfe eines Massstabs durchgeführt und haben keinen Anspruch auf hohe Genauigkeit.} an einem realen Knie. Daraus ergeben sich folgende Fakten:
+		Das Kreuzband\footnote{Für eine detaillierte Erläuterungen sei auf den Abschnitt \vref{s:funktion_kreuzband} verwiesen.} engt den Bewegungsfreiraum des Knies ein. Diese Einschränkung erlaubt es, den geforderten Messbereich zu beschränken und dadurch das Konzept stark zu vereinfachen. Als Ausgangslage für die Auslegung des nötigen Bereichs dienen Messungen\footnote{Die Messungen wurden mithilfe eines Massstabs durchgeführt und haben keinen Anspruch auf hohe Genauigkeit.} an einem realen Knie. Daraus ergeben sich folgende Fakten:
 		\begin{itemize}
 			\item Horizontale Auslenkung y von $\pm$\unit[2.5]{cm}
 			\item Auslenkung in x-Richtung von $+$\unit[0.5]{cm}
@@ -133,7 +133,7 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 		\image{content/3_konzept/image/knie_bewegung}{scale=0.6}{htbp}[Auslenkung Knie][img:knie_auslenkung]
 	%
 	\subsection{Messgenauigkeit}\label{ss:messgenauigkeit}
-		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen, oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen, um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$ \unit[1.0]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden}.
+		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen, oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen, um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$\unit[1.0]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden}.
 %
 %
 \section{Angrenzende Projekte}
