--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -35,7 +35,7 @@ Das Kreuzband wird in Sportarten, in welchen grosse Belastungen des Knies mit Tä
 	In der Konzept- und Implementationsphase wird das Werkzeug \gls{g:labview} der Firma \gls{ac:ni} verwendet. \gls{g:labview} ist die Abkürzung für \textsf{Laboratory Virtual Instrument Engineering Workbench} und stellt eine Entwicklungsumgebung und eine grafische Programmiersprache dar. Es wurde in den 70er-Jahren von den Mitgründern von \gls{ac:ni}, Jim Truchard und Jeff Kodosky, entworfen und wird stetig weiter entwickelt. Im Gegensatz zu den gängigen Hochsprachen wie C/C++ ist in \gls{g:labview} der Datenfluss im Zentrum und nicht Kontrollstrukturen, das heisst, das Datenflussprinzip wird verfolgt \cite[19-22]{lit:labview}.
 	%
 	\subsection{Aufbau und Struktur}\label{ss:aufbau_struktur}
-		Ein \gls{g:labview}-Projekt besteht aus mindestens einem \gls{ac:vi}, in welchem sich Funktionsblöcke oder weitere \gls{ac:vi} befinden können. Eine \gls{ac:vi} besteht aus einem Frontpanel und einem Blockdiagramm. Das Frontpanel stellt dabei die Benutzeroberfläche dar, wogegen das Blockdiagramm die eigentliche Funktionalität beinhaltet.\par
+		Ein \gls{g:labview}-Projekt besteht aus mindestens einem \acrshort{ac:vi} (\gls{ac:vi}), in welchem sich Funktionsblöcke oder weitere \gls{ac:vi} befinden können. Eine \gls{ac:vi} besteht aus einem Frontpanel und einem Blockdiagramm. Das Frontpanel stellt dabei die Benutzeroberfläche dar, wogegen das Blockdiagramm die eigentliche Funktionalität beinhaltet.\par
 		%
 		Ein wichtiger Aspekt im Aufbau eines \gls{g:labview}-Projekts ist die Unterscheidung zwischen dem \gls{g:host} und dem \gls{g:target}. Der \gls{g:host} bezeichnet dabei den Computer mit installiertem \gls{g:labview} und das \gls{g:target} eine zu \gls{g:labview} kompatible embedded Hardware, z.B. eine Datenerfassungskarte. Daten, die auf dem \gls{g:target} erfasst werden, befinden sich trotz bestehender Kommunikation zum \gls{g:host} nicht automatisch auf derselben. Sie werden stattdessen auf dem internen Speicher des \gls{g:target}s gespeichert und müssen anschliessend aus diesem Speicher extrahiert werden\footnote{Dieses Fallbeispiel bezieht sich auf die Hardware \gls{g:myrio}.}. Ebenso wird zwischen \gls{ac:vi} auf dem \gls{g:host} und \gls{g:target} unterschieden. Sie müssen für beide Systeme separat gestartet werden. Die Aufteilung ist im Projektdialog durch eine unterschiedliche Dateibaumtiefe visualisiert, wie der Abbildung \vref{img:labview_gliederung} zu entnehmen ist.
 		%
@@ -65,7 +65,7 @@ Das Kreuzband wird in Sportarten, in welchen grosse Belastungen des Knies mit Tä
 				\item[\gls{g:labview}] Normalerweise erfolgt die Bedienung via \gls{g:labview}. Dabei werden \gls{ac:vi} erstellt und auf das \gls{g:myrio} geladen. Zusätzlich besteht die Möglichkeit, mithilfe vorgefertigter \gls{ac:vi} direkt auf das Real-Time-Linux zuzugreifen (siehe Abbildung \vref{img:myrio_cmd}).
 				\image{content/2_grundlagen/image/labview_myrio_cmd}{scale=0.9}{htbp}[System-\gls{ac:vi} auf \gls{g:myrio} \cite{img:myrio_labview}][System-\gls{ac:vi} auf \gls{g:myrio}][img:myrio_cmd]
 				%
-				\item[NI MAX] MAX steht für Measurement and Automation-Explorer und ist ein Werkzeug für die Verbindungsaufnahme und Konfiguration von \gls{ac:ni}-Hardware wie das \gls{g:myrio}. Ausserdem stehen abhängig von der Hardware unterschiedliche Diagnose-Werkzeuge zur Verfügung. Die Installation von NI MAX erfolgt zeitgleich mit \gls{g:labview} \cite{lit:ni_max}. 
+				\item[NI MAX] MAX steht für \textsf{Measurement and Automation-Explorer} und ist ein Werkzeug für die Verbindungsaufnahme und Konfiguration von \gls{ac:ni}-Hardware wie das \gls{g:myrio}. Ausserdem stehen abhängig von der Hardware unterschiedliche Diagnose-Werkzeuge zur Verfügung. Die Installation von NI MAX erfolgt zeitgleich mit \gls{g:labview} \cite{lit:ni_max}. 
 				%
 				\item[Web-Oberfläche] Das \gls{g:myrio} stellt eine Web-Oberfläche für die Konfiguration bereit. Damit können im gleichen Umfang wie in der Software NI MAX Einstellungen vorgenommen werden. Ergänzend besteht die Möglichkeit, auf das interne Dateisystem via HTTP zuzugreifen. Aufgerufen wird die Oberfläche über die IP-Adresse 172.22.11.2 mit einem Internet-Browser.
 				%
