--- a/report.tex
+++ b/report.tex
@@ -19,12 +19,12 @@
 \documentclass[version=last,fleqn,pointlessnumbers,openright,twoside]{scrreprt}  %first: Ergebniss Kompatibel zu ersten Version; last: Ergebniss entspricht den aktuellen Paketen; fleqn: Formeln linksbündig; pointlessnumbers: Kapitelnummerierung ohne Punkt; twoside: Doppelseitiger Druck
 
 %Dokumentangaben
-\newcommand{\Titel}{Bachelorthesis}
+\newcommand{\Titel}{Bachelor-Thesis}
 \newcommand{\Uebertitel}{Smart Rehabilitation bei Kreuzbandrissen}
 \newcommand{\AutorA}{Simon Grossenbacher}
 \newcommand{\AutorB}{Reto Zurschmiede}
-\newcommand{\DozentA}{Rolf Vetter}
-\newcommand{\DozentB}{Ivo Oesch}
+\newcommand{\DozentB}{Rolf Vetter}
+\newcommand{\DozentA}{Ivo Oesch}
 \newcommand{\ExpertA}{Dominique Renevey}
 \newcommand{\Studiengang}{Elektro- und Kommunikationstechnik}
 \newcommand{\Datum}{\the\day.\the\month.\the\year}
