--- a/appendix/messung/messung.tex
+++ b/appendix/messung/messung.tex
@@ -13,7 +13,7 @@
 % 0.0.01      Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \chapter{Messungen}\label{ch:messungen}
-	In diesem Kapitel sind alle Messergebnisse die während des Projekts aufgeführt. Die Gliederung folgt dabei der Reihenfolge der Durchführung. 
+	In diesem Kapitel sind Messergebnisse aufgeführt, die während des Projekts aufgezeichnet wurden. Die Gliederung folgt dabei der Reihenfolge der Durchführung. 
     %
 %    \section{Konzept}\label{s:anhang_konzept_messung}
 %    	Messungen während der Konzeptphase.
@@ -55,9 +55,9 @@
 		
 		\section{Messung Drift}\label{ss:anhang_drift}
 		%
-		Messung des Driftes. Dabei wurde die Bewegungsdetektion ausgeschaltet und das \gls{g:myrio} für \unit[10]{s} in Ruhe auf dem Tisch in der z-Achsen Position, wie in Abschnitt \vref{s:verifikation_translation} beschrieben, platziert.
+		Messung des Drifts. Dabei wurde die Bewegungsdetektion ausgeschaltet und das \gls{g:myrio} für \unit[10]{s} in Ruhe auf dem Tisch in der z-Achsen Position, wie in Abschnitt \vref{s:verifikation_translation} beschrieben, platziert.
 		%
-		\image{appendix/messung/image/Drift}{scale=0.6}{htbp}[Drift auf der x- und y-Achse während 10 s][img:drift]		
+		\image{appendix/messung/image/Drift}{scale=1}{htbp}[Drift auf der x- und y-Achse während 10 s][img:drift]		
     	
     %
     %\section{Implementation}\label{s:anhang_implementation_messung}
